--- a/springboot2/src/main/resources/static/css/main.css
+++ b/springboot2/src/main/resources/static/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 #wrapper { 
  margin: 0 auto;
- width: 922px;
+ width: 1222px;
 
 }
 #header {
@@ -41,14 +41,14 @@ body {
  float: left;
 }
 #content {
- float: right;
+ float: left;
  color: #333;
  border: 1px solid #ccc;
  background: #F2F2E6;
  margin: 0px 0px 5px 0px;
  padding: 10px;
  height: 350px;
- width: 278px;
+ width: 678px;
  display: inline;
 }
 #footer { 
