--- a/springboot2/src/main/resources/templates/exam/exam7.html
+++ b/springboot2/src/main/resources/templates/exam/exam7.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default}">
 <head>
-    <meta charset="UTF-8">
     <title th:text="${title}">ajax 실습</title>
     <link rel="stylesheet" th:href="@{/css/table.css}">
 </head>
-<body>
+<th:block layout:fragment="customContent">
     <h1>ajax 실습</h1>
     <button type="button" id="listBtn">전체 회원조회</button> <br><br>
     <input type="text" id="memberId" name="memberId" placeholder="검색할 아이디를 입력해주세요"/>
@@ -14,91 +15,91 @@
     <table>
         <thead>
             <tr>
-                <td>회원아이디</td>
-                <td>회원비밀번호</td>
-                <td>회원등급</td>
-                <td>회원이름</td>
-                <td>회원연락처</td>
+                <th>회원아이디</th>
+                <th>회원비밀번호</th>
+                <th>회원등급</th>
+                <th>회원이름</th>
+                <th>회원연락처</th>
             </tr>
         </thead>
         <tbody id="tbody">
 
         </tbody>
     </table>
+    </th:block>
+<th:block layout:fragment="customJs">
     <script>
-        const $memberId = document.querySelector('#memberId');
-        const $searchBtn = document.querySelector('#searchBtn');
-        const value = $memberId.value
-        $searchBtn.addEventListener('click', e => {
+    const $memberId = document.querySelector('#memberId');
+    const $searchBtn = document.querySelector('#searchBtn');
+    const value = $memberId.value
+    $searchBtn.addEventListener('click', e => {
 
-            console.log($memberId.value)
-            request.get('/member/list')
-                .then(list => {
-                    console.log(list);
-                    $tbody.replaceChildren();
-                    const domFragment = document.createDocumentFragment();
-                        list.forEach(memberInfo =>{
-                            console.log(memberInfo.memberId === $memberId.value);
+    console.log($memberId.value)
+    request.get('/member/list')
+    .then(list => {
+    console.log(list);
+    $tbody.replaceChildren();
+    const domFragment = document.createDocumentFragment();
+    list.forEach(memberInfo =>{
+    console.log(memberInfo.memberId === $memberId.value);
 
-                            if(memberInfo.memberId === $memberId.value){
-                                const $tr = document.createElement('tr');
-                                for(const key in memberInfo){
-                                    const $td = document.createElement('td');
-                                    $td.textContent = memberInfo[key];
-                                    $tr.append($td)
-                                }
-                                domFragment.append($tr)
-                            }
-
-
-                        });
-                        $tbody.append(domFragment);
-
-                })
-                .catch(error => {
-                    console.error('There has been a problem with your fetch operation:', error);
-                });
-        })
+    if(memberInfo.memberId === $memberId.value){
+    const $tr = document.createElement('tr');
+    for(const key in memberInfo){
+    const $td = document.createElement('td');
+    $td.textContent = memberInfo[key];
+    $tr.append($td)
+    }
+    domFragment.append($tr)
+    }
 
 
-        // fetch
-        // 실습. listBtn 클릭시 콘솔에 회원의 전체목록을 출력하시오.
-        const request = {
-            get(url){
-                return fetch(url).then(response => response.json())
-            },
-            post(url, option){
-                return fetch(url,option).then(response => response.json())
-            }
-        }
+    });
+    $tbody.append(domFragment);
 
-        const $listBtn = document.querySelector('#listBtn')
-        const $tbody = document.querySelector('#tbody')
-        $listBtn.addEventListener('click', e => {
-            request.get('/member/list')
-                .then(list => {
-                    console.log(list);
-                    $tbody.replaceChildren();
-                    const domFragment = document.createDocumentFragment();
-                    list.forEach(memberInfo =>{
-                        console.log(memberInfo);
-                        const $tr = document.createElement('tr');
-                        for(const key in memberInfo){
-                            const $td = document.createElement('td');
-                            $td.textContent = memberInfo[key];
-                            $tr.append($td)
-                        }
-                        domFragment.append($tr)
-                    });
-                    $tbody.append(domFragment);
-                    
-                })
-                .catch(error => {
-                    console.error('There has been a problem with your fetch operation:', error);
-                });
-        })
+    })
+    .catch(error => {
+    console.error('There has been a problem with your fetch operation:', error);
+    });
+    })
 
+
+    // fetch
+    // 실습. listBtn 클릭시 콘솔에 회원의 전체목록을 출력하시오.
+    const request = {
+    get(url){
+    return fetch(url).then(response => response.json())
+    },
+    post(url, option){
+    return fetch(url,option).then(response => response.json())
+    }
+    }
+
+    const $listBtn = document.querySelector('#listBtn')
+    const $tbody = document.querySelector('#tbody')
+    $listBtn.addEventListener('click', e => {
+    request.get('/member/list')
+    .then(list => {
+    console.log(list);
+    $tbody.replaceChildren();
+    const domFragment = document.createDocumentFragment();
+    list.forEach(memberInfo =>{
+    console.log(memberInfo);
+    const $tr = document.createElement('tr');
+    for(const key in memberInfo){
+    const $td = document.createElement('td');
+    $td.textContent = memberInfo[key];
+    $tr.append($td)
+    }
+    domFragment.append($tr)
+    });
+    $tbody.append(domFragment);
+
+    })
+    .catch(error => {
+    console.error('There has been a problem with your fetch operation:', error);
+    });
+    })
     </script>
-
-</body>
+</th:block>
 </html>
