--- a/springboot2/src/main/resources/templates/exam/exam2.html
+++ b/springboot2/src/main/resources/templates/exam/exam2.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default}">
 <head>
-    <meta charset="UTF-8">
-    <title th:text="${title}">thymeleaf 반복문</title>
-    <style>
 
-
-    </style>
 </head>
 
-<body>
+<th:block layout:fragment="customContent">
     <h1>thymeleaf 반복분</h1>
     - 태그속성 th:each 문법
     - 문법에서 : th:each="약어(객체, 객체의 상태) : ${반복가능한 객체}" <br>
@@ -54,5 +51,5 @@
         <label th:text="${num}"></label>
     </div>
 
-</body>
+</th:block>
 </html>
