--- a/springboot2/src/main/resources/templates/exam/exam5.html
+++ b/springboot2/src/main/resources/templates/exam/exam5.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default}">
 <head>
     <meta charset="UTF-8">
     <title th:text="${title}">thymeleaf 유틸리티 오브젝트</title>
 </head>
-<body>
+<th:block layout:fragment="customContent">
     <h1>thymeleaf 유틸리티 오브젝트</h1>
     - java.util 패키지 안에있는 유틸리트 클래스를 thymeleaf 가공해서 제공하는 클래스 <br>
     - 구분 ${#thymeleaf유틸클래스.메소드()} <br>
@@ -23,5 +25,5 @@
     <h2 th:text="${#lists.size(memberList)}"></h2>
     <h2 th:text="${memberList.size()}"></h2>
 
-</body>
+</th:block>
 </html>
