--- a/boneEx/mybatis/src/main/resources/templates/fragments/header.html
+++ b/boneEx/mybatis/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
 	<div id="header" th:fragment="headerFragment">
 		상단메뉴<br>
 		fragments/header.html<br><br><br>
-		<a href="#">회원가입</a>
+		<a th:href="@{/member/addMember}">회원가입</a>
 		<a th:href="@{/member/memberList}">회원목록</a>
 		<a href="#">상품등록</a>
 		<a href="#">상품목록</a>
