--- a/boneEx/mybatis/src/main/resources/templates/admin/member/memberList.html
+++ b/boneEx/mybatis/src/main/resources/templates/admin/member/memberList.html
@@ -2,14 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="~{layout/default}">
-	<!--/* ~{layout/default} == src/main/resources/templateslayout/default.html */-->
-
+	<!-- ~{layout/default} ==  src/main/resources/templates/layout/default.html -->
 	<head>
-		<link rel="stylesheet" type="text/css" th:href="@{/css/table.css}"/>
+		<link rel="stylesheet" type="text/css" th:href="@{/css/table.css}">
 	</head>
 	
 	<th:block layout:fragment="customContent">
-		<h1 th:text="${content}">HELLO! SPRING BOOT!</h1>
 		<table>
 			<thead>
 				<tr>
@@ -20,11 +18,13 @@
 					<th>회원주소</th>
 					<th>회원이메일</th>
 					<th>회원등록일자</th>
+					<th>수정</th>
+					<th>삭제</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:unless="${memberList != null}">
-					<td colspan="7">회원 정보가 없습니다</td>
+					<td colspan="9">등록된 회원의 정보가 없습니다.</td>
 				</tr>
 				<tr th:if="${memberList != null}" th:each="l : ${memberList}">
 					<td th:text="${l.memberId}"></td>
@@ -34,14 +34,32 @@
 					<td th:text="${l.memberAddr}"></td>
 					<td th:text="${l.memberEmail}"></td>
 					<td th:text="${l.memberRegDate}"></td>
+					<td>
+						<a th:href="@{/member/modifyMember(memberId=${l.memberId})}">수정</a>
+					</td>
+					<td>
+						<a th:href="@{/member/removeMember(memberId=${l.memberId})}">삭제</a>
+					</td>
 				</tr>
 			</tbody>
-		</table>
+		</table>	
 	</th:block>
 	
 	<th:block layout:fragment="customJsFile">
 	</th:block>
 	
 	<th:block layout:fragment="customJs">
+		<script th:inline="javascript">
+			const msg = [[${msg}]];
+			if(msg) alert(msg);
+		</script>
 	</th:block>
 </html>
+
+
+
+
+
+
+
+
