--- a/boneEx/mybatis/src/main/resources/templates/admin/goods/goodsList.html
+++ b/boneEx/mybatis/src/main/resources/templates/admin/goods/goodsList.html
@@ -8,6 +8,7 @@
 	</head>
 	
 	<th:block layout:fragment="customContent">
+		<div th:insert="~{fragments/search :: searchMultiFragment}"></div><br><br>
 		<table>
 			<thead>
 				<tr>
@@ -49,12 +50,58 @@
 	</th:block>
 	
 	<th:block layout:fragment="customJsFile">
+		<script th:src="@{/js/jquery-3.7.1.js}"></script>
 	</th:block>
 	
 	<th:block layout:fragment="customJs">
 		<script th:inline="javascript">
 			const msg = [[${msg}]];
 			if(msg) alert(msg);
+			$('#searchMultiBtn').click(function(){
+				const multiSearch = [];
+				$('.searchKey:checked').each((idx, item) => {
+					const searchObj = {
+							'searchKey' : $(item).val(),
+							'searchValue' : $('#searchValue').val()
+					}
+					multiSearch.push(searchObj)
+				});
+				
+				let minPrice = Number($('#minPrice').val());
+				let maxPrice = Number($('#maxPrice').val());
+									
+				if(minPrice > maxPrice){
+					$('#minPrice').val(maxPrice);
+					$('#maxPrice').val(minPrice);
+					minPrice = Number($('#minPrice').val());
+					maxPrice = Number($('#maxPrice').val());
+				}
+				
+				if(maxPrice > 0){					
+					const priceObj = {
+							searchKey : 'goodsPrice',
+							searchValue : { minPrice, maxPrice }
+					}
+					multiSearch.push(priceObj);
+				}
+				
+				console.log(multiSearch);
+				if(multiSearch.length){					
+					const request = $.ajax({
+						url : '/goods/searchList',
+						method : 'POST',
+						contentType: 'application/json; charset=utf-8',
+						data : JSON.stringify(multiSearch),
+						dataType : 'json'
+					});
+					request.done(data => {
+						console.log(data)
+					});
+					request.fail( (jqXHR, textStatus, error) => {
+						console.log(error)
+					});
+				}
+			});
 		</script>
 	</th:block>
 </html>
