--- a/boneEx/mybatis/src/main/resources/templates/admin/member/sellerList.html
+++ b/boneEx/mybatis/src/main/resources/templates/admin/member/sellerList.html
@@ -32,18 +32,18 @@
 				
 				<th:block th:if="${sellerList != null}" th:each="l : ${sellerList}">
 					<th:block th:unless="${#lists.isEmpty(l.goodsList)}"
-							  th:each="gl : ${l.goodsList}">
+							  th:each="gl, status : ${l.goodsList}">
 						<tr>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${l.memberId}"></td>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${l.memberPw}"></td>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${l.memberName}"></td>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${l.memberAddr}"></td>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${l.memberEmail}"></td>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${l.memberRegDate}"></td>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${gl.goodsCode}"></td>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${gl.goodsName}"></td>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${gl.goodsPrice}"></td>
-							<td th:if="${status.fitst}" th:rows="${status.last}" th:text="${gl.goodsRegDate}"></td>
+							<td th:if="${status.first}" th:rowspan="${status.size}" th:text="${l.memberId}"></td>
+							<td th:if="${status.first}" th:rowspan="${status.size}" th:text="${l.memberPw}"></td>
+							<td th:if="${status.first}" th:rowspan="${status.size}" th:text="${l.memberName}"></td>
+							<td th:if="${status.first}" th:rowspan="${status.size}" th:text="${l.memberAddr}"></td>
+							<td th:if="${status.first}" th:rowspan="${status.size}" th:text="${l.memberEmail}"></td>
+							<td th:if="${status.first}" th:rowspan="${status.size}" th:text="${l.memberRegDate}"></td>
+							<td th:text="${gl.goodsCode}"></td>
+							<td th:text="${gl.goodsName}"></td>
+							<td th:text="${gl.goodsPrice}"></td>
+							<td th:text="${gl.goodsRegDate}"></td>
 							<td>
 								<a th:href="@{#}">수정</a>
 							</td>
