--- a/boneEx/mybatis/src/main/resources/templates/admin/member/loginHistory.html
+++ b/boneEx/mybatis/src/main/resources/templates/admin/member/loginHistory.html
@@ -37,7 +37,25 @@
 				</tr>
 			</tbody>
 			<tfoot>
-			
+				<tr>
+					<td colspan="6">
+						<a th:href="@{/member/loginHistory}">[맨처음]</a>
+						<a th:if="${currentPage > 1}"
+						   th:href="@{/member/loginHistory(currentPage=${currentPage - 1})}">[이전]</a>
+						<span th:unless="${currentPage > 1}">[이전]</span>
+						<th:block th:each="num : ${#numbers.sequence(startPageNum, endPageNum)}">
+							<a th:unless="${currentPage == num}"
+							   th:href="@{/member/loginHistory(currentPage=${num})}"
+							   th:text="|[${num}]|"></a>
+							<span th:if="${currentPage == num}"
+								  th:text="|[${num}]|"></span>
+						</th:block>
+						<a th:if="${currentPage < lastPage}"
+						   th:href="@{/member/loginHistory(currentPage=${currentPage + 1})}">[다음]</a>
+						<span th:unless="${currentPage < lastPage}">[다음]</span>
+						<a th:href="@{/member/loginHistory(currentPage=${lastPage})}">[마지막]</a>
+					</td>
+				</tr>
 			</tfoot>
 		</table>	
 	</th:block>
